@@ -1,7 +1,9 @@
-CHANGELOG
+AUTHORS
+ChangeLog
 COVERAGE
 CREDITS
 INSTALL
+NEWS
 README
 README.sg_start
 doc/README.doc
